k8/base/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    app: api-v1
  ports:
    - port: 5000
      name: api
    - port: 5090
      name: metrics
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-01
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-v1
  template:
    metadata:
      labels:
        app: api-v1
    spec:
      containers:
        - name: api
          image: minter/api
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 5000
            - name: metrics
              containerPort: 5090
          command: ["./api"]
          resources:
            requests:
              cpu: '2'
              memory: 4Gi
          readinessProbe:
            httpGet:
              path: /healthz
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: api
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
